[package]
edition = "2024"
name = "root-bear-clone"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "root-bear-clone"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32", "log-04", "unstable"] }


esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32", "log-04"] }
log = "0.4.27"

critical-section = "1.2.0"
esp-backtrace = { version = "0.19.0", features = ["esp32", "panic-handler", "println"] }
esp-println = { version = "0.17.0", features = ["esp32", "log-04"] }
ssd1306 = { version = "0.10.0", features = ["async", "embedded-graphics-core", "graphics"] }
embedded-graphics = "0.8.2"


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2 # prefer slower builds but better debugging experience
lto = 'fat'
opt-level = 's'
